end of work day thurs; working on center and sidebar

--- a/index.html
+++ b/index.html
@@ -12,24 +12,26 @@
 
 	<div class="hero">
 		<div class="row">
-			<div class="left-link">
-				<div class="logo-link">
-					<img src="assets/images/logo.png" class="logo" />SURF &AMP; PADDLE CO. BLOG
-				</div>
+			<div class="left-side">
+				<div class="logo"><img src="assets/images/logo.png" class="logo" /></div>
+				SURF &AMP; PADDLE CO. BLOG
+				
 			</div>
 			<div class="right-link">
 				<div class="link"><a href="">ABOUT</a></div>
-				<div class="link"><a href="#">SEARCH</a></div>
-				<a href="#"><img src="assets/images/search-icon.png"></a>	
+				<div class="link"><a href="#">SEARCH  <img src="assets/images/search-icon.png"></a></div>	
 			</div>
 		</div>
-		<div class="row">
-			<div class="title">SURF &AMP; PADDLE CO.</div>
-		</div>
-		<div class="row">
-			<div class="subtitle">An Ironyard Academy Project Est. Fall 2013</div>
-		</div>
+
+		<div class="title">SURF &AMP; PADDLE CO.</div>
+		<div class="subtitle">An Ironyard Academy Project Est. Fall 2013</div>
+
 	</div>
+
+
+
+
+
 
 	<div class="center">
 		<div class="headline">
@@ -93,7 +95,7 @@
 		</div>
 		<div class="side-content">
 			<div class="side-heading">SIDEBAR SECTION HEADING</div>
-			<div class="side-text">Swimmin' pools movie stars. These days are all Happy and Free. These days are all share them with me oh baby. And we'll do it our way yes our way. Make all our dreams come true for me and you. Boy the way Glen Miller played. Songs that made the hit parade. Guys like us we had it made. Those were the days. It's time to play the music. It's time to light the lights. It's time to meet the Muppets on the Muppet Show tonight.</div>
+			<div class="text">Swimmin' pools movie stars. These days are all Happy and Free. These days are all share them with me oh baby. And we'll do it our way yes our way. Make all our dreams come true for me and you. Boy the way Glen Miller played. Songs that made the hit parade. Guys like us we had it made. Those were the days. It's time to play the music. It's time to light the lights. It's time to meet the Muppets on the Muppet Show tonight.</div>
 		</div>
 	</div>
 
