save before adding new text categories

--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
 		</div>
 		<div class="byline">
 			<div class="avatar">
-				<a href="#"><img src="assets/images/avatar.png"></a>
+				<a href="#"><img src="assets/images/avatar.png"> Anne Marie </a>
 			</div>
-			Anne Marie
-			<div class="date">on Monday Oct. 7th 9:22pm</div>
+			<div class="date">on <a href="">Monday Oct. 7th 9:22pm</a></div>
 		</div>
 		<div class="text">
 		<p>Doin' it our way. There's nothing we wont try. Never heard the word impossible. This time there's no stopping us? Well we're movin' on up to the east side. To a deluxe apartment in the sky. You wanna be where you can see our troubles are all the same. You wanna be where everybody knows Your name. </p>
@@ -91,7 +90,7 @@
 			<div class="ad-image">
 				<a href="#"><img src="assets/images/ad.jpg"></a>
 			</div>
-			About This Ad
+			<a href="#">About This Ad</a>
 		</div>
 		<div class="side-content">
 			<div class="side-heading">SIDEBAR SECTION HEADING</div>
