Thurs night stopping point

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 		<div class="headline">
 			A FANTASTIC ENGAGING HEADLINE GOES HERE
 		</div>
-		<div class="byline">
-			<div class="avatar">
-				<a href="#"><img src="assets/images/avatar.png"> Anne Marie </a>
+		<div class="byline sub">
+			
+				<a href="#"><img src="assets/images/avatar.png" class="icon"/><div class="avatar">Anne Marie </a>
 			</div>
 			<div class="date">on <a href="">Monday Oct. 7th 9:22pm</a></div>
 		</div>
@@ -76,7 +76,7 @@
 		</div>
 	</div>
 
-	<div class="sidebar">
+	<div class="sidebar sub">
 		<div class="connect">
 			<div class="avatar">
 				<a href="#"><img src="assets/images/avatar.png"></a>
