EOD Friday - fiddling with button links, margins, and starting to cleanup

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
 		
 		<div class="row buttons">
 			<a href = "#">
-			<div class="button-link">
+			<div class="button link">
 				<div class="button-icon"><img src="assets/images/icon-comment.png"></div>
 				Read Comments
 			</div>
 			</a>
 			<a href = "#">
-			<div class="button-link">
+			<div class="button link">
 				<div class="button-icon"><img src="assets/images/icon-comment.png"></div>
 				Read Later
 			</div>
 			</a>
 			<a href = "#">
-			<div class="button-link blue">
+			<div class="button link blue">
 				<div class="button-icon"><img src="assets/images/icon-comment.png"></div>
 				Share This Post
 			</div>
@@ -123,17 +123,14 @@
 			</div>			
 		</div>
 		<div class="row bottom">
-			<div class="left-side">
-
-					<a href="http://theironyard.com"><img src="assets/images/theironyard-logo.png"></a>
-x
+			<div class="copyright">
+					<div class="logo"><a href="http://theironyard.com"><img src="assets/images/theironyard-logo.png"></a></div>
 				The Ironyard Copyright 2013, All Rights Reserved
 			</div>
-			<div class="right">
-				<div class="nav link">Nav Item 1</div>
-				<div class="nav link">Nav Item 2</div>
-				<div class="nav link">Nav Item 3</div>
-				<div class="nav link">Nav Item 4</div>
+				<div class="nav link"><a href="">Nav Item 1</a></div>
+				<div class="nav link"><a href="">Nav Item 2</a></div>
+				<div class="nav link"><a href="">Nav Item 3</a></div>
+				<div class="nav link"><a href="">Nav Item 4</a></div>
 			</div>
 		</div>
 	</div>
