Changes to Surf Assignment

--- a/surf.html
+++ b/surf.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 	<title> Surf and Paddle </title>
@@ -33,7 +33,7 @@
 				</div>
 				<div class="cell-content"> Lemon drops  topping jelly beans tiramisu liquorice icing ice cream. Pastry chocolate gummi bears jujubes topping croissant cookie cake. Pie cake chocolate bar apple pie bear claw cupcake.  tootsie roll donut sugar plum bear claw macaroon jelly candy. Cupcake jujubes oat cake tart oat cake danish. Bear claw  fruitcake. </br> </br>Topping muffin chupa chups halvah tart jujubes. Cotton candy sweet marzipan pie halvah. Bear claw brownie soufflé cheesecake sweet bear claw croissant liquorice jelly beans. Candy canes soufflé marshmallow apple pie bear claw candy. Oat cake carrot cake cookie marzipan. Bonbon muffin gingerbread chocolate chupa chups topping.</div> 
 				<div class="whoa"> Whoa, That's Radical. </div>
-				<div class="cell-content"> Lemon drops  topping jelly beans tiramisu liquorice icing ice cream. Pastry chocolate gummi bears jujubes topping croissant cookie cake. Pie cake chocolate bar apple pie bear claw cupcake.  tootsie roll donut sugar plum bear claw macaroon jelly candy. Cupcake jujubes oat cake tart oat cake danish. Bear claw  fruitcake. </br> </br> Topping muffin chupa chups halvah tart jujubes. Cotton candy sweet marzipan pie halvah. Bear claw brownie  cheesecake sweet bear claw croissant liquorice jelly beans. Candy canes soufflé marshmallow apple pie bear claw candy. Oat cake carrot cake cookie marzipan. Bonbon muffin gingerbread chocolate chupa chups topping.</div>
+				<div class="cell-content"> Lemon drops  topping jelly beans tiramisu liquorice icing ice cream. Pastry chocolate gummi bears jujubes topping croissant cookie cake. Pie cake chocolate bar apple pie bear claw cupcake.  tootsie roll donut sugar plum bear claw macaroon jelly candy. Cupcake jujubes oat cake tart oat cake danish. <a href="http://google.com">Bear claw  fruitcake.</a> </br> </br> Topping muffin chupa chups halvah tart jujubes. Cotton candy sweet marzipan pie halvah. Bear claw brownie  cheesecake sweet bear claw croissant liquorice jelly beans. Candy canes soufflé marshmallow apple pie bear claw candy. Oat cake carrot cake cookie marzipan. Bonbon muffin gingerbread chocolate chupa chups topping.</div> </br>
 				<div class="button">
 					<img src="assets/images/icon-comment.png"/>
 					<div class="social"> Read Comments</div>
@@ -44,16 +44,19 @@
 				</div>
 			</div>
 			<div class="row-2">
-				<div class="profile-photo"> <img src="assets/images/avatar.png"/> </div>
-				<div class="name"> Anne Marie </div>
-				<div class="cell">Twitter</div>
-				<div class="cell">Facebook</div>
-				<div class="cell">Instagram</div>
-				<img src="assets/images/ad.jpg"/> 
-				<div class="about-ad"><a href="http://www.google.com"> About this ad. </a></div>
-				<div class="sidebar"> Side Bar Section Heading </div>
-				<p> Gummies biscuit tiramisu donut muffin jelly beans. Jelly-o candy canes chocolate cake. Muffin pie cake tootsie roll cotton candy jelly beans lollipop. Oat cake topping marzipan gummi bears marshmallow. Cake icing liquorice lemon drops croissant bear claw candy chupa chups. Lollipop cake bonbon. Gummies tiramisu brownie danish croissant jelly-o brownie tart pudding.</p>
-			</div>
+				<div class="left-row">
+					<div class="profile-photo"> <img src="assets/images/avatar.png"/> </div>
+					<div class="name"> Anne Marie </div>
+					<div class="cell">Twitter</div>
+					<div class="cell">Facebook</div>
+					<div class="cell">Instagram</div></br>
+				 <div class="about">
+					<img src="assets/images/ad.jpg"/> 
+					<div class="about-ad"><a href="http://www.google.com"> About this ad. </a></div> </div> </br>
+					<div class="sidebar"> Side Bar Section Heading </div>
+					<p> Gummies biscuit tiramisu donut muffin jelly beans. Jelly-o candy canes chocolate cake. Muffin pie cake tootsie roll cotton candy jelly beans lollipop. Oat cake topping marzipan gummi bears marshmallow. Cake icing liquorice lemon drops croissant bear claw candy chupa chups. Lollipop cake bonbon. Gummies tiramisu brownie.</p>
+					</div>
+				</div>	
 		</div>
 		<div class="foot">
 			<div class="content-headline"> Most Popular Posts </div>
