button links - need v centering

--- a/index.html
+++ b/index.html
@@ -57,19 +57,18 @@
 		<div class="row buttons">
 			<a href = "#">
 			<div class="button link">
-				<div class="button-icon"><img src="assets/images/icon-comment.png"></div>
-				Read Comments
+				<div class="button-icon"><img src="assets/images/icon-comment.png"></div> Read Comments
 			</div>
 			</a>
 			<a href = "#">
 			<div class="button link">
-				<div class="button-icon"><img src="assets/images/icon-comment.png"></div>
+				<div class="button-icon"><img src="assets/images/icon-upload.png"></div>
 				Read Later
 			</div>
 			</a>
 			<a href = "#">
 			<div class="button link blue">
-				<div class="button-icon"><img src="assets/images/icon-comment.png"></div>
+				<div class="button-icon"><img src="assets/images/icon-share.png"></div>
 				Share This Post
 			</div>
 			</a>						
