Final Version of Assignment

--- a/surf.html
+++ b/surf.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="top">
 			<div class="link-left">
-				<img src= "assets/images/logo.png"/> Surf &amp; Paddle Co Blog
+				<img src= "assets/images/logo.png"/> Surf &amp; Paddle Co. Blog
 			</div>
 			<div class="link-right"> 
 				<div class="cell"> About</div>
@@ -28,7 +28,7 @@
 			<div class="row-1">
 				<div class="content-headline">A Fantastic Engaging headline Goes Here!</div>
 				<div class="sub-content"> 
-					<img src="assets/images/avatar.png"/> Ann Marie on <a href="http://google.com">Monday, Oct 7, 2013 9:22pm</a>
+					<img src="assets/images/avatar.png"/> Anne Marie  <a href="http://google.com">on Monday, Oct 7, 2013 9:22pm</a>
 				</div>
 				</div>
 				<div class="cell-content"> Lemon drops  topping jelly beans tiramisu liquorice icing ice cream. Pastry chocolate gummi bears jujubes topping croissant cookie cake. Pie cake chocolate bar apple pie bear claw cupcake.  tootsie roll donut sugar plum bear claw macaroon jelly candy. Cupcake jujubes oat cake tart oat cake danish. Bear claw  fruitcake. </br> </br>Topping muffin chupa chups halvah tart jujubes. Cotton candy sweet marzipan pie halvah. Bear claw brownie soufflé cheesecake sweet bear claw croissant liquorice jelly beans. Candy canes soufflé marshmallow apple pie bear claw candy. Oat cake carrot cake cookie marzipan. Bonbon muffin gingerbread chocolate chupa chups topping.</div> 
@@ -52,7 +52,7 @@
 					<div class="cell">Instagram</div></br>
 				 <div class="about">
 					<img src="assets/images/ad.jpg"/> 
-					<div class="about-ad"><a href="http://www.google.com"> About this ad. </a></div> </div> </br>
+					<div class="about-ad"><a href="http://www.google.com"> About this ad</a></div> </div> </br>
 					<div class="sidebar"> Side Bar Section Heading </div>
 					<p> Gummies biscuit tiramisu donut muffin jelly beans. Jelly-o candy canes chocolate cake. Muffin pie cake tootsie roll cotton candy jelly beans lollipop. Oat cake topping marzipan gummi bears marshmallow. Cake icing liquorice lemon drops croissant bear claw candy chupa chups. Lollipop cake bonbon. Gummies tiramisu brownie.</p>
 					</div>
@@ -61,26 +61,26 @@
 		<div class="foot">
 			<div class="content-headline"> Most Popular Posts </div>
 			<div class="bottom-pic">
-				<div class="foot-headline1"> Another cool post.</div>
-				<div class="foot-headline2"> Post title.</div>
-				<div class="foot-headline3"> Here's another post title. </div>
-				<div class="foot-headline4"> Oh another cool post.</div>
+				<div class="foot-headline1"><div class="blue">Another cool post.</div></div>
+				<div class="foot-headline2"> <div class="blue">Post title.</div></div>
+				<div class="foot-headline3"> <div class="blue">Here's another post title. </div></div>
+				<div class="foot-headline4"> <div class="blue">Oh another cool post.</div></div>
 			</div>
 		</div>
-
-		<div class="footer">
-			<div class="footer-left"> 
-				<img src="assets/images/theironyard-logo.png"/> The Ironyard Copyright 2013.All Rights Reserved.
-			</div>
-			<div class="footer-right"> 
-				<div class="footer-cell">Nav Item 1</div>
-				<div class="footer-cell">Nav Item 2</div>
-				<div class="footer-cell">Nav Item 3</div>
-				<div class="footer-cell">Nav Item 4</div>
-				
+		<div class="bigfoot">
+			<div class="footer">
+				<div class="footer-left"> 
+					<img src="assets/images/theironyard-logo.png"/> The Ironyard Copyright 2013,All Rights Reserved
+				</div>
+				<div class="footer-right"> 
+					<div class="footer-cell">Nav Item 1</div>
+					<div class="footer-cell">Nav Item 2</div>
+					<div class="footer-cell">Nav Item 3</div>
+					<div class="footer-cell">Nav Item 4</div>
+					
+				</div>
 			</div>
 		</div>
-
 
 	</div>
 
