--- a/surfandpaddle3.html
+++ b/surfandpaddle3.html
@@ -2,6 +2,7 @@
 	<link href="http://fonts.googleapis.com/css?family=Oswald" rel="stylesheet" type="text/css">
 	<title>Surf Paddle Co.</title>
 	<link rel="stylesheet" type="text/css" href="surfandpaddle3.css">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>	
 
@@ -38,7 +39,7 @@
 					<span> Anne Marie </span> <b> on </b> <a href="#">Monday Oct. 7th 9:22pm.</a>	
 				</p>
 			</div>
-			<link href="http://fonts.googleapis.com/css?family=Asap" rel="stylesheet" type="text/css">
+			<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 			<p class="paragraphone"> 
 				Now that there is the Tec-9, a crappy spray gun from South Miami. This gun is advertised as the most popular gun in American crime. Do you believe that shit? It actually says that in the little book that comes with it: the most popular gun in American crime. Like they're actually proud of that shit. 
  
