--- a/surf-and-paddle.html
+++ b/surf-and-paddle.html
@@ -145,14 +145,15 @@
 
 				<div class="row3">
 					<div class="theironyard">
-						<img src="assets/images/theironyard-logo.png" class="theironyard-image"/> The Iron Copyright 2013, All rights Reserved
+						<img src="assets/images/theironyard-logo.png"/> The Iron Copyright 2013, All rights Reserved
+					<div class="list">	
 						<ul>
 							<li class="nav">Nav Item  1</li>
 							<li class="nav">Nav Item  2</li>
 							<li class="nav">Nav Item  3</li>
 							<li class="nav">Nav Item  4</li>
 						</ul>
-						
+					</div>	
 					</div>
 					</div>
 				</div>
